Expand initial chapters, add #Sample and #Methods
the following chapters have been edited:

 - introduction
 - previous research
 - justification
 - sample (initial commit)
 - materials and methods (initial commit)

--- a/source/references/references.bib
+++ b/source/references/references.bib
@@ -215,3 +215,69 @@ doi = {10.1037/0096-3445.127.3.286}
   year={2007},
   publisher={Elsevier}
 }
+
+@article{damasio-1998,
+  title={Emotion in the perspective of an integrated nervous system},
+  author={Damasio, Antonio R},
+  journal={Brain research reviews},
+  volume={26},
+  number={2-3},
+  pages={83--86},
+  year={1998},
+  publisher={Elsevier}
+}
+
+@book{ekman-1994,
+  title={The nature of emotion: Fundamental questions.},
+  author={Ekman, Paul Ed and Davidson, Richard J},
+  year={1994},
+  publisher={Oxford University Press}
+}
+
+@book{schacter-et-at-2011,
+	title = {Psychology (2nd Edition)},
+	year = {2011},
+	publisher = {Worth},
+	organization = {Worth},
+	address = {New York},
+	author = {D.L. Schacter and Gilbert, D. T. and Wegner, D. M.}
+}
+
+@article{damasio-1996,
+	title = {The somatic marker hypothesis and the possible functions of the prefrontal cortex},
+        author = {Damasio, Antonio R},
+	volume = {351},
+	number = {1346},
+	pages = {1413--1420},
+	year = {1996},
+	doi = {10.1098/rstb.1996.0125},
+	publisher = {The Royal Society},
+	issn = {0962-8436},
+	URL = {http://rstb.royalsocietypublishing.org/content/351/1346/1413},
+	eprint = {http://rstb.royalsocietypublishing.org/content/351/1346/1413.full.pdf},
+	journal = {Philosophical Transactions of the Royal Society B: Biological Sciences}
+}
+
+@article{ledoux-1994,
+  title={Emotion, memory and the brain},
+  author={LeDoux, Joseph E},
+  journal={Scientific American},
+  volume={270},
+  number={6},
+  pages={50--57},
+  year={1994},
+  publisher={JSTOR}
+}
+
+@incollection{schwarz-1990,
+  booktitle={Handbook of motivation and cognition: Foundations of
+                  social behavior},
+  volume={2},
+  editor={Higgins, Tory E and Sorrentino, Richard M},
+  title={Feelings as information: Informational and
+                  motivational functions of affective states},
+  author={Schwarz, Norbert},
+  year={1990},
+  pages={527-561},
+  publisher={Guilford Press}
+}
