expand materials and methods section with some writing

--- a/source/references/references.bib
+++ b/source/references/references.bib
@@ -281,3 +281,14 @@ doi = {10.1037/0096-3445.127.3.286}
   pages={527-561},
   publisher={Guilford Press}
 }
+
+@article{friesen-kingstone-1998,
+  title={The eyes have it! Reflexive orienting is triggered by nonpredictive gaze},
+  author={Friesen, Chris Kelland and Kingstone, Alan},
+  journal={Psychonomic bulletin \& review},
+  volume={5},
+  number={3},
+  pages={490--495},
+  year={1998},
+  publisher={Springer}
+}
