big update: reorder chapters, connect intro and previous research sections, add mvpa justification figures

--- a/style/preamble.tex
+++ b/style/preamble.tex
@@ -52,8 +52,8 @@
 \definecolor{javapurple}{rgb}{0.5,0,0.35}
 \definecolor{javadocblue}{rgb}{0.25,0.35,0.75}
 
-\lstdefinestyle{javaCodeStyle}{
-  language=Java,                         % the language of the code
+\lstdefinestyle{RCodeStyle}{
+  language=R,                         % the language of the code
   backgroundcolor=\color{backcolour},    % choose the background color; you must add \usepackage{color} or \usepackage{xcolor}
   basicstyle=\fontsize{10}{8}\sffamily,
   breakatwhitespace=false,
