sample: add basic information

--- a/source/references/references.bib
+++ b/source/references/references.bib
@@ -292,3 +292,18 @@ doi = {10.1037/0096-3445.127.3.286}
   year={1998},
   publisher={Springer}
 }
+
+@article{galfano-et-all-2011,
+   author = {Giovanni Galfano and Michela Sarlo and Federica Sassi and Marianna Munafò and Luis J. Fuentes and Carlo Umiltà},
+   title = {Reorienting of spatial attention in gaze cuing is reflected in N2pc},
+   journal = {Social Neuroscience},
+   volume = {6},
+   number = {3},
+   pages = {257-269},
+   year  = {2011},
+   publisher = {Routledge},
+   doi = {10.1080/17470919.2010.515722},
+   note ={PMID: 20924978},
+   URL = {https://doi.org/10.1080/17470919.2010.515722},
+   eprint = {https://doi.org/10.1080/17470919.2010.515722}
+}
