previous literature: add info regarding neuroanatomy of attention and emotion

--- a/source/references/references.bib
+++ b/source/references/references.bib
@@ -307,3 +307,106 @@ doi = {10.1037/0096-3445.127.3.286}
    URL = {https://doi.org/10.1080/17470919.2010.515722},
    eprint = {https://doi.org/10.1080/17470919.2010.515722}
 }
+
+@article{vossel-et-al-2014,
+author = {Simone Vossel and Joy J. Geng and Gereon R. Fink},
+title ={Dorsal and Ventral Attention Systems: Distinct Neural Circuits but Collaborative Roles},
+journal = {The Neuroscientist},
+volume = {20},
+number = {2},
+pages = {150-159},
+year = {2014},
+doi = {10.1177/1073858413494269},
+    note ={PMID: 23835449},
+URL = {https://doi.org/10.1177/1073858413494269},
+eprint = {https://doi.org/10.1177/1073858413494269}
+}
+
+@article{macaluso-2010,
+  title={Orienting of spatial attention and the interplay between the senses},
+  author={Macaluso, Emiliano},
+  journal={Cortex},
+  volume={46},
+  number={3},
+  pages={282--297},
+  year={2010},
+  publisher={Elsevier}
+}
+
+@article{vandenberghe-gillebert-2009,
+  title={Parcellation of parietal cortex: convergence between lesion-symptom mapping and mapping of the intact functioning brain},
+  author={Vandenberghe, Rik and Gillebert, C{\'e}line R},
+  journal={Behavioural brain research},
+  volume={199},
+  number={2},
+  pages={171--182},
+  year={2009},
+  publisher={Elsevier}
+}
+
+@article{umarova-et-al-2009,
+  title={Structural connectivity for visuospatial attention: significance of ventral pathways},
+  author={Umarova, Roza M and Saur, Dorothee and Schnell, Susanne and Kaller, Christoph P and Vry, Magnus-Sebastian and Glauche, Volkmar and Rijntjes, Michel and Hennig, J{\"u}rgen and Kiselev, Valerij and Weiller, Cornelius},
+  journal={Cerebral cortex},
+  volume={20},
+  number={1},
+  pages={121--129},
+  year={2009},
+  publisher={Oxford University Press}
+}
+
+@article{jerde-et-al-2012,
+  title={Prioritized maps of space in human frontoparietal cortex},
+  author={Jerde, Trenton A and Merriam, Elisha P and Riggall, Adam C and Hedges, James H and Curtis, Clayton E},
+  journal={Journal of Neuroscience},
+  volume={32},
+  number={48},
+  pages={17382--17390},
+  year={2012},
+  publisher={Soc Neuroscience}
+}
+
+@article{corbetta-et-al-2008,
+  title={The reorienting system of the human brain: from environment to theory of mind},
+  author={Corbetta, Maurizio and Patel, Gaurav and Shulman, Gordon L},
+  journal={Neuron},
+  volume={58},
+  number={3},
+  pages={306--324},
+  year={2008},
+  publisher={Elsevier}
+}
+
+@article{fox-et-al-2006,
+  title={Spontaneous neuronal activity distinguishes human dorsal and ventral attention systems},
+  author={Fox, Michael D and Corbetta, Maurizio and Snyder, Abraham Z and Vincent, Justin L and Raichle, Marcus E},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={103},
+  number={26},
+  pages={10046--10051},
+  year={2006},
+  publisher={National Acad Sciences}
+}
+
+@article{de-schotten-et-all-2011,
+  title={A lateralized brain network for visuospatial attention},
+  author={De Schotten, Michel Thiebaut and Dell'Acqua, Flavio and Forkel, Stephanie J and Simmons, Andrew and Vergani, Francesco and Murphy, Declan GM and Catani, Marco},
+  journal={Nature neuroscience},
+  volume={14},
+  number={10},
+  pages={1245},
+  year={2011},
+  publisher={Nature Publishing Group}
+}
+
+@incollection{ledoux-damasio-2013,
+        author = {LeDoux, Joseph E and Damasio, Antonio R},
+	booktitle = {Principles of Neural Science},
+	editor = {Kandel, Eric R and Schwartz, James H and Jessell,
+                  Thomas M and Department of Biochemistry and
+                  Molecular Biophysics Thomas Jessell and Siegelbaum,
+                  Steven and Hudspeth, AJ},
+  volume={5},
+  year={2013},
+  publisher={McGraw-hill New York}
+}
