--- a/source/figures/paradigm_state_diagram.tex
+++ b/source/figures/paradigm_state_diagram.tex
@@ -16,17 +16,13 @@
     \node[state] (😏)[right of=☺] {😏};        % happy averted
     \node[state] (😏*)[above right=0cm and 1cm of 😏]                     {😏*}; %happy congruent
     \node[state] (*😏)[below right=0cm and 1cm of 😏]                     {*😏}; %happy incongruent
-    \node[state] (blankhappy)[below right=0cm and 1cm of 😏*] {};
-    \node[state] (+2happy)[right of=blankhappy] {+};
-    \node[state] (☺2)[right of=+2happy] {☺};        %happy2
-    \node[state] (☺*)[right of=☺2] {☺*}; %happy null
 
     \node[state] (*😒)[above of=😏*]                     {*😒}; %neutral incongruent
     \node[state] (😒)[above left =0cm and 1cm of *😒]             {😒}; %neutral averted
     \node[state] (😐)[left of=😒]                             {😐}; %neutral
     \node[state] (😒*)[above of=*😒]                     {😒*}; %neutral congruent
-    \node[state] (blankneutral)[below right=0cm and 1cm of 😒*] {};
-    \node[state] (+2neutral)[right of=blankneutral] {+};
+    \node[state] (blank)[below right=0cm and 1cm of 😏*] {};
+    \node[state] (+2neutral)[right of=blank] {+};
     \node[state] (😐2)[right of=+2neutral]             {😐}; %neutral
     \node[state] (😐*)[right of=😐2]                     {😐*}; %neutral null
 
@@ -34,15 +30,11 @@
     \node[state] (😒averted)[below left=0cm and 1cm of 😒**] {😒};         %sad averted
     \node[state] (☹)[left of=😒averted] {☹};
     \node[state] (**😒)[below of=😒**] {*😒}; %sad incongruent
-    \node[state] (blanksad)[below right=0cm and 1cm of 😒**] {};
-    \node[state] (+2sad)[right of=blanksad] {+};
-    \node[state] (☹2)[right of=+2sad] {☹};         %sad null
-    \node[state] (☹*)[right of=☹2]                     {☹*}; %sad null
 
     % fixation point
     \node[state] (+)[left of=☺] {+};             % fixation point
     \node (start)[left of=+] {...};
-    \node[state] (blank2)[right=1cm of ☺*] {};
+    \node[state] (blank2)[right of=😐*] {};
     \node (end)[right of=blank2] {...};
 
     % edges
@@ -70,31 +62,23 @@
     \path(😒averted) edge[bend right=20,green] (**😒);
 
     % 2nd-to-3rd column edges
-    \path(😒*) edge (blankneutral);
-    \path(*😒) edge (blankneutral);
-    \path(😐2) edge  (😐*);
-    \path(blank2) edge[bend right=90] node[swap]{\footnotesize $.75$} (+2neutral);
+    \path(😒*) edge (blank);
+    \path(*😒) edge (blank);
+    \path(😒**) edge (blank);
+    \path(**😒) edge (blank);
+    \path(😏*) edge (blank);
+    \path(*😏) edge (blank);
+
+    \path(blank) edge (+2neutral);
+
+    \path(+2neutral) edge (😐2);
+
+    \path(😐2) edge (😐*);
+
     \path(😐*) edge (blank2);
 
-    \path(😏*) edge (blankhappy);
-    \path(*😏) edge (blankhappy);
-    \path(☺2) edge (☺*);
-    \path(blank2) edge[bend left=30] node{\footnotesize $.75$} (+2happy);
-    \path(☺*) edge (blank2);
-
-    \path(😒**) edge (blanksad);
-    \path(**😒) edge (blanksad);
-    \path(☹2) edge (☹*);
-    \path(blank2) edge[bend left=90] node{\footnotesize $.75$} (+2sad);
-    \path(☹*) edge (blank2);
-
+    \path(blank2) edge[bend right=90] node[swap]{\footnotesize $.75$} (+2neutral);
     \path(blank2) edge node{\footnotesize $.25$} (end);
-    \path(blankneutral) edge (+2neutral);
-    \path(blankhappy) edge (+2happy);
-    \path(blanksad) edge (+2sad);
-    \path(+2neutral) edge (😐2);
-    \path(+2happy) edge (☺2);
-    \path(+2sad) edge (☹2);
 
     % braces (timeline and contrasts)
     \draw[-,decorate,decoration={brace,amplitude=3pt,mirror}] (-1.8,-4)
@@ -124,14 +108,14 @@
                                          1500\;ms \\
                         \end{array}$};
     \draw[-,decorate,decoration={brace,amplitude=3pt,mirror}] (7.8,-4)
-        -- (9,-4) node[pos=0.5,anchor=north,yshift=-1]{\footnotesize  $1500\;ms$};
-    \draw[-,decorate,decoration={brace,amplitude=3pt,mirror}] (9.5,-4)
-       -- (10.8,-4) node[pos=0.5,anchor=north,yshift=-1]{\footnotesize  $500\;ms$};
+        -- (8.8,-4) node[pos=0.5,anchor=north,yshift=-1]{\footnotesize  $1500\;ms$};
+    \draw[-,decorate,decoration={brace,amplitude=3pt,mirror}] (9,-4)
+       -- (10.2,-4) node[pos=0.5,anchor=north,yshift=-1]{\footnotesize  $500\;ms$};
 
     \draw[-,decorate,decoration={brace,amplitude=3pt}] (-1.8,4)
         -- (5.1,4) node[pos=0.5,yshift=1]{\footnotesize  Gaze cuing};
     \draw[-,decorate,decoration={brace,amplitude=3pt}] (5.3,4)
-        -- (11,4) node[pos=0.5,yshift=1]{\footnotesize  Control};
+        -- (10.2,4) node[pos=0.5,yshift=1]{\footnotesize  Control};
 
   \end{tikzpicture}
 \end{document}
