--- a/style/preamble.tex
+++ b/style/preamble.tex
@@ -1,7 +1,8 @@
-
+% lang
+\usepackage[spanish]{babel}
 
 % Table of contents formatting
-\renewcommand{\contentsname}{Table of Contents}
+\renewcommand{\contentsname}{Índice}
 \setcounter{tocdepth}{3}
 
 % Headers and page numbering
@@ -23,7 +24,8 @@
 % \usepackage{titlesec, blindtext, color}
 % \definecolor{gray75}{gray}{0.75}
 % \newcommand{\hsp}{\hspace{20pt}}
-% \titleformat{\chapter}[hang]{\Huge\bfseries}{\thechapter\hsp\textcolor{gray75}{|}\hsp}{0pt}{\Huge\bfseries}
+% % \titleformat{\chapter}[hang]{\Huge\bfseries}{\thechapter\hsp\textcolor{gray75}{|}\hsp}{0pt}{\Huge\bfseries}
+% \titleformat{\chapter}[display]{\normalfont\bfseries}{}{0pt}{\Large}
 
 % % Fonts and typesetting
 % \setmainfont[Scale=1.1]{Helvetica}
