reformulate intro and previous lit. sections: focus on emotion decoding

--- a/source/references/references.bib
+++ b/source/references/references.bib
@@ -12,6 +12,93 @@ author={Tom Pollard and Marvin Reimer and David San and Arco Mul and
 year={2016},
 month={Jul}}
 
+@article{kragel-labar-2016,
+  title={Decoding the nature of emotion in the brain},
+  author={Kragel, Philip A and LaBar, Kevin S},
+  journal={Trends in cognitive sciences},
+  volume={20},
+  number={6},
+  pages={444--455},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@article{kragel-labar-2014,
+  title={Advancing Emotion Theory with Multivariate Pattern Classification},
+  author={Kragel, Philip A and LaBar, Kevin S},
+  journal={Emotion Review},
+  volume={6},
+  number={2},
+  pages={160--174},
+  year={2014},
+  publisher={Sagepub}
+}
+
+@article{phan-et-al-2002,
+  title={Functional neuroanatomy of emotion: a meta-analysis of emotion activation studies in PET and fMRI},
+  author={Phan, K Luan and Wager, Tor and Taylor, Stephan F and Liberzon, Israel},
+  journal={Neuroimage},
+  volume={16},
+  number={2},
+  pages={331--348},
+  year={2002},
+  publisher={Elsevier}
+}
+
+@article{murphy-et-al-2003,
+  title={Functional neuroanatomy of emotions: a meta-analysis},
+  author={Murphy, Fionnuala C and Nimmo-Smith, IAN and Lawrence, Andrew D},
+  journal={Cognitive, Affective, \& Behavioral Neuroscience},
+  volume={3},
+  number={3},
+  pages={207--233},
+  year={2003},
+  publisher={Springer}
+}
+
+@article{vytal-and-hamann-2010,
+  title={Neuroimaging support for discrete neural correlates of basic emotions: a voxel-based meta-analysis},
+  author={Vytal, Katherine and Hamann, Stephan},
+  journal={Journal of cognitive neuroscience},
+  volume={22},
+  number={12},
+  pages={2864--2885},
+  year={2010},
+  publisher={MIT Press}
+}
+
+@article{barrett-2006,
+  title={Are emotions natural kinds?},
+  author={Barrett, Lisa Feldman},
+  journal={Perspectives on psychological science},
+  volume={1},
+  number={1},
+  pages={28--58},
+  year={2006},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
+@article{hamann-2012,
+  title={Mapping discrete and dimensional emotions onto the brain: controversies and consensus},
+  author={Hamann, Stephan},
+  journal={Trends in cognitive sciences},
+  volume={16},
+  number={9},
+  pages={458--466},
+  year={2012},
+  publisher={Elsevier}
+}
+
+@article{celeghin-et-al-2017,
+  title={Basic emotions in human neuroscience: neuroimaging and beyond},
+  author={Celeghin, Alessia and Diano, Matteo and Bagnis, Arianna and Viola, Marco and Tamietto, Marco},
+  journal={Frontiers in Psychology},
+  volume={8},
+  pages={1432},
+  year={2017},
+  publisher={Frontiers}
+}
+
 @incollection{klauer-musch-2003,
 	booktitle = {The Psychology of Evaluation: Affective Processes
                   in Cognition and Emotion},
