antecedentes: mvpa en emociones

--- a/source/references/references.bib
+++ b/source/references/references.bib
@@ -67,6 +67,17 @@ month={Jul}}
   publisher={MIT Press}
 }
 
+@article{lindquist-et-al-2012,
+  title={The brain basis of emotion: a meta-analytic review},
+  author={Lindquist, Kristen A and Wager, Tor D and Kober, Hedy and Bliss-Moreau, Eliza and Barrett, Lisa Feldman},
+  journal={Behavioral and brain sciences},
+  volume={35},
+  number={3},
+  pages={121--143},
+  year={2012},
+  publisher={Cambridge University Press}
+}
+
 @article{barrett-2006,
   title={Are emotions natural kinds?},
   author={Barrett, Lisa Feldman},
@@ -89,6 +100,17 @@ month={Jul}}
   publisher={Elsevier}
 }
 
+@article{lindquist-barrett-2012,
+  title={A functional architecture of the human brain: emerging insights from the science of emotion},
+  author={Lindquist, Kristen A and Barrett, Lisa Feldman},
+  journal={Trends in cognitive sciences},
+  volume={16},
+  number={11},
+  pages={533--540},
+  year={2012},
+  publisher={Elsevier}
+}
+
 @article{celeghin-et-al-2017,
   title={Basic emotions in human neuroscience: neuroimaging and beyond},
   author={Celeghin, Alessia and Diano, Matteo and Bagnis, Arianna and Viola, Marco and Tamietto, Marco},
@@ -97,6 +119,190 @@ month={Jul}}
   pages={1432},
   year={2017},
   publisher={Frontiers}
+}
+
+@article{guillory-bujarski-2014,
+  title={Exploring emotions using invasive methods: review of 60 years of human intracranial electrophysiology},
+  author={Guillory, Sean A and Bujarski, Krzysztof A},
+  journal={Social cognitive and affective neuroscience},
+  volume={9},
+  number={12},
+  pages={1880--1889},
+  year={2014},
+  publisher={Oxford University Press}
+}
+
+@article{wager-et-al-2008,
+  title={The neuroimaging of emotion},
+  author={Wager, Tor D and Barrett, Lisa Feldman and Bliss-Moreau, Eliza and Lindquist, Kristen and Duncan, Seth and Kober, Hedy and Joseph, Josh and Davidson, Matthew and Mize, Jennifer},
+  journal={Handbook of emotions},
+  volume={3},
+  pages={249--271},
+  year={2008},
+  publisher={Guilford Press New York}
+}
+
+@article{peelen-et-al-2010,
+  title={Supramodal representations of perceived emotions in the human brain},
+  author={Peelen, Marius V and Atkinson, Anthony P and Vuilleumier, Patrik},
+  journal={Journal of Neuroscience},
+  volume={30},
+  number={30},
+  pages={10127--10134},
+  year={2010},
+  publisher={Soc Neuroscience}
+}
+
+@article{pessoa-padmala-2007,
+  title={Decoding near-threshold perception of fear from distributed single-trial brain activation},
+  author={Pessoa, Luiz and Padmala, Srikanth},
+  journal={Cerebral cortex},
+  volume={17},
+  number={3},
+  pages={691--701},
+  year={2007},
+  publisher={Oxford University Press}
+}
+
+@article{ethofer-et-al-2009,
+  title={Decoding of emotional information in voice-sensitive cortices},
+  author={Ethofer, Thomas and Van De Ville, Dimitri and Scherer, Klaus and Vuilleumier, Patrik},
+  journal={Current Biology},
+  volume={19},
+  number={12},
+  pages={1028--1033},
+  year={2009},
+  publisher={Elsevier}
+}
+
+@article{kotz-et-al-2012,
+  title={Predicting vocal emotion expressions from the human brain},
+  author={Kotz, Sonja A and Kalberlah, Christian and Bahlmann, J{\"o}rg and Friederici, Angela D and Haynes, John-D},
+  journal={Human Brain Mapping},
+  volume={34},
+  number={8},
+  pages={1971--1981},
+  year={2012},
+  publisher={Wiley Online Library}
+}
+
+@article{said-et-al-2010,
+  title={Distributed representations of dynamic facial expressions in the superior temporal sulcus},
+  author={Said, Christopher P and Moore, Christopher D and Engell, Andrew D and Todorov, Alexander and Haxby, James V},
+  journal={Journal of vision},
+  volume={10},
+  number={5},
+  pages={11--11},
+  year={2010},
+  publisher={The Association for Research in Vision and Ophthalmology}
+}
+
+@article{hernandez-et-al-2018,
+  title={Decoding Human Emotional Faces in the Dog's Brain},
+  author={Hern{\'a}ndez-P{\'e}rez, Ra{\'u}l and Concha, Luis and Cuaya, Laura V},
+  journal={bioRxiv},
+  pages={134080},
+  year={2018},
+  publisher={Cold Spring Harbor Laboratory}
+}
+
+@article{rolls-et-al-2009,
+  title={Prediction of subjective affective state from brain activations},
+  author={Rolls, Edmund T and Grabenhorst, Fabian and Franco, Leonardo},
+  journal={Journal of Neurophysiology},
+  volume={101},
+  number={3},
+  pages={1294--1308},
+  year={2009},
+  publisher={American Physiological Society}
+}
+
+@article{baucom-et-al-2012,
+  title={Decoding the neural representation of affective states},
+  author={Baucom, Laura B and Wedell, Douglas H and Wang, Jing and Blitzer, David N and Shinkareva, Svetlana V},
+  journal={Neuroimage},
+  volume={59},
+  number={1},
+  pages={718--727},
+  year={2012},
+  publisher={Elsevier}
+}
+
+@article{chikazoe-et-al-2014,
+  title={Population coding of affect across stimuli, modalities and individuals},
+  author={Chikazoe, Junichi and Lee, Daniel H and Kriegeskorte, Nikolaus and Anderson, Adam K},
+  journal={Nature neuroscience},
+  volume={17},
+  number={8},
+  pages={1114},
+  year={2014},
+  publisher={Nature Publishing Group}
+}
+
+@article{shinkareva-et-al-2014,
+  title={Representations of modality-specific affective processing for visual and auditory stimuli derived from functional magnetic resonance imaging data},
+  author={Shinkareva, Svetlana V and Wang, Jing and Kim, Jongwan and Facciani, Matthew J and Baucom, Laura B and Wedell, Douglas H},
+  journal={Human brain mapping},
+  volume={35},
+  number={7},
+  pages={3558--3568},
+  year={2014},
+  publisher={Wiley Online Library}
+}
+
+@article{chang-et-al-2015,
+  title={A sensitive and specific neural signature for picture-induced negative affect},
+  author={Chang, Luke J and Gianaros, Peter J and Manuck, Stephen B and Krishnan, Anjali and Wager, Tor D},
+  journal={PLoS biology},
+  volume={13},
+  number={6},
+  pages={e1002180},
+  year={2015},
+  publisher={Public Library of Science}
+}
+
+@article{sitaram-et-al-2011,
+  title={Real-time support vector classification and feedback of multiple emotional brain states},
+  author={Sitaram, Ranganatha and Lee, Sangkyun and Ruiz, Sergio and Rana, Mohit and Veit, Ralf and Birbaumer, Niels},
+  journal={Neuroimage},
+  volume={56},
+  number={2},
+  pages={753--765},
+  year={2011},
+  publisher={Elsevier}
+}
+
+@article{kassam-et-al-2013,
+  title={Identifying emotions on the basis of neural activation},
+  author={Kassam, Karim S and Markey, Amanda R and Cherkassky, Vladimir L and Loewenstein, George and Just, Marcel Adam},
+  journal={PloS one},
+  volume={8},
+  number={6},
+  pages={e66032},
+  year={2013},
+  publisher={Public Library of Science}
+}
+
+@article{saarimaki-et-al-2015,
+  title={Discrete neural signatures of basic emotions},
+  author={Saarim{\"a}ki, Heini and Gotsopoulos, Athanasios and J{\"a}{\"a}skel{\"a}inen, Iiro P and Lampinen, Jouko and Vuilleumier, Patrik and Hari, Riitta and Sams, Mikko and Nummenmaa, Lauri},
+  journal={Cerebral cortex},
+  volume={26},
+  number={6},
+  pages={2563--2573},
+  year={2015},
+  publisher={Oxford University Press}
+}
+
+@article{kragel-labar-2015,
+  title={Multivariate neural biomarkers of emotional states are categorically distinct},
+  author={Kragel, Philip A and LaBar, Kevin S},
+  journal={Social cognitive and affective neuroscience},
+  volume={10},
+  number={11},
+  pages={1437--1448},
+  year={2015},
+  publisher={Oxford University Press}
 }
 
 @incollection{klauer-musch-2003,
@@ -340,8 +546,6 @@ doi = {10.1037/0096-3445.127.3.286}
 	doi = {10.1098/rstb.1996.0125},
 	publisher = {The Royal Society},
 	issn = {0962-8436},
-	URL = {http://rstb.royalsocietypublishing.org/content/351/1346/1413},
-	eprint = {http://rstb.royalsocietypublishing.org/content/351/1346/1413.full.pdf},
 	journal = {Philosophical Transactions of the Royal Society B: Biological Sciences}
 }
 
