antecedentes: más MVPA

--- a/source/references/references.bib
+++ b/source/references/references.bib
@@ -132,6 +132,77 @@ month={Jul}}
   publisher={Oxford University Press}
 }
 
+@article{lewis-peacock-norman-2013,
+  title={Multi-voxel pattern analysis of fMRI data},
+  author={Lewis-Peacock, Jarrod A and Norman, Kenneth A},
+  journal={The cognitive neurosciences},
+  pages={911--920},
+  year={2013},
+  publisher={MIT Press Cambridge, MA}
+}
+
+@book{huettel-et-al-2009,
+  title={Functional magnetic resonance imaging},
+  author={Huettel, Scott A and Song, Allen W and McCarthy, Gregory and others},
+  volume={1},
+  year={2009},
+  publisher={Sinauer Associates Sunderland, MA},
+  edition={2}
+}
+
+@article{norman-et-al-2006,
+  title={Beyond mind-reading: multi-voxel pattern analysis of fMRI data},
+  author={Norman, Kenneth A and Polyn, Sean M and Detre, Greg J and Haxby, James V},
+  journal={Trends in cognitive sciences},
+  volume={10},
+  number={9},
+  pages={424--430},
+  year={2006},
+  publisher={Elsevier}
+}
+
+@article{jimura-poldrack-2012,
+  title={Analyses of regional-average activation and multivoxel pattern information tell complementary stories},
+  author={Jimura, Koji and Poldrack, Russell A},
+  journal={Neuropsychologia},
+  volume={50},
+  number={4},
+  pages={544--552},
+  year={2012},
+  publisher={Elsevier}
+}
+
+@article{tong-pratte-2012,
+  title={Decoding patterns of human brain activity},
+  author={Tong, Frank and Pratte, Michael S},
+  journal={Annual review of psychology},
+  volume={63},
+  pages={483--509},
+  year={2012},
+  publisher={Annual Reviews}
+}
+
+@article{rissman-wagner-2012,
+  title={Distributed representations in memory: insights from functional brain imaging},
+  author={Rissman, Jesse and Wagner, Anthony D},
+  journal={Annual review of psychology},
+  volume={63},
+  pages={101--128},
+  year={2012},
+  publisher={Annual Reviews}
+}
+
+@article{soon-et-al-2008,
+  title={Unconscious determinants of free decisions in the human brain},
+  author={Soon, Chun Siong and Brass, Marcel and Heinze, Hans-Jochen and Haynes, John-Dylan},
+  journal={Nature neuroscience},
+  volume={11},
+  number={5},
+  pages={543},
+  year={2008},
+  publisher={Nature Publishing Group}
+}
+
 @article{wager-et-al-2008,
   title={The neuroimaging of emotion},
   author={Wager, Tor D and Barrett, Lisa Feldman and Bliss-Moreau, Eliza and Lindquist, Kristen and Duncan, Seth and Kober, Hedy and Joseph, Josh and Davidson, Matthew and Mize, Jennifer},
