miscelaneous tiny changes

--- a/source/references/references.bib
+++ b/source/references/references.bib
@@ -78,6 +78,17 @@ month={Jul}}
   publisher={Cambridge University Press}
 }
 
+@article{barrett-wager-2006,
+  title={The structure of emotion: Evidence from neuroimaging studies},
+  author={Barrett, Lisa Feldman and Wager, Tor D},
+  journal={Current Directions in Psychological Science},
+  volume={15},
+  number={2},
+  pages={79--83},
+  year={2006},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
 @article{barrett-2006,
   title={Are emotions natural kinds?},
   author={Barrett, Lisa Feldman},
@@ -771,4 +782,15 @@ eprint = {https://doi.org/10.1177/1073858413494269}
   volume={5},
   year={2013},
   publisher={McGraw-hill New York}
+}
+
+@article{logothetis-2008,
+  title={What we can do and what we cannot do with fMRI},
+  author={Logothetis, Nikos K},
+  journal={Nature},
+  volume={453},
+  number={7197},
+  pages={869},
+  year={2008},
+  publisher={Nature Publishing Group}
 }
