--- a/style/preamble.tex
+++ b/style/preamble.tex
@@ -20,11 +20,11 @@
 % or use \extrafloats{100}
 % add some \clearpage
 
-% % Chapter header
+% Chapter header
 % \usepackage{titlesec, blindtext, color}
 % \definecolor{gray75}{gray}{0.75}
 % \newcommand{\hsp}{\hspace{20pt}}
-% % \titleformat{\chapter}[hang]{\Huge\bfseries}{\thechapter\hsp\textcolor{gray75}{|}\hsp}{0pt}{\Huge\bfseries}
+%% \titleformat{\chapter}[hang]{\Huge\bfseries}{\vspace{-10em}\thechapter\hsp\textcolor{gray75}{|}\hsp}{0pt}{\Huge\bfseries}
 % \titleformat{\chapter}[display]{\normalfont\bfseries}{}{0pt}{\Large}
 
 % % Fonts and typesetting
